<resources>
    <string name="app_name">鼎胜赛事</string>
    <string name="common_phone_input_hint">输入手机号码</string>
    <string name="common_phone_input_error">手机号输入不正确</string>
    <string name="common_password_input_error">请输入密码</string>
    <string name="common_password_input_unlike">两次密码输入不一致，请重新输入</string>
    <string name="common_code_input_hint">输入验证码</string>
    <string name="common_code_send">发送验证码</string>
    <string name="common_code_send_hint">验证码已发送，请注意查收</string>
    <string name="common_code_error_hint">验证码错误，请检查输入</string>
    <string name="common_step_next">下一步</string>
    <string name="common_step_complete">完成</string>
    <string name="common_step_commit">提交</string>
    <string name="common_step_modify">修改</string>
    <string name="common_permission_hint">请先授予权限</string>
    <string name="common_permission_fail">授权失败，请手动授予权限</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_failed">支付失败:</string>
    <string name="common_loading">加载中&#8230;</string>
    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>
    <string name="common_year">年</string>
    <string name="common_month">月</string>
    <string name="common_day">日</string>
    <string name="common_hour">时</string>
    <string name="common_minute">分</string>
    <string name="common_second">秒</string>
    <string name="common_network">当前没有网络连接，请检查网络设置</string>
    <string name="http_loading">加载中&#8230;</string>
    <string name="http_unknown_error">请求出错，未知错误</string>
    <string name="http_account_error">账号异常，请重新登录</string>
    <string name="http_data_explain_error">数据解析异常，请稍后</string>
    <string name="http_server_out_time">服务器请求超时，请稍后再试</string>
    <string name="http_network_error">请求失败，请检查网络设置</string>
    <string name="http_response_error">服务器响应异常，请稍后再试</string>
    <string name="http_server_error">服务器连接异常，请稍后再试</string>
    <string name="http_request_cancel">请求被中断，请重试</string>
    <string name="hint_layout_no_data">暂无内容，去其他地方转转~</string>
    <string name="hint_layout_error_request">请求出错，点击重试</string>
    <string name="hint_layout_error_network">网络错误，点击重试</string>
    <string name="address_title">请选择地区</string>
    <string name="address_hint">请选择</string>
    <string name="date_title">请选择日期</string>
    <string name="time_title">请选择时间</string>
    <string name="update_title">发现新版本</string>
    <string name="update_content">更新内容</string>
    <string name="update_no">下次再说</string>
    <string name="update_yes">立即更新</string>
    <string name="update_permission_hint">必须先要授予权限才能正常下载更新哦</string>
    <string name="update_status_start">正在下载</string>
    <string name="update_status_running">下载中 %d%%</string>
    <string name="update_status_successful">下载完成，点击安装</string>
    <string name="update_status_failed">下载失败，点击重试</string>
    <string name="update_no_update">当前已是最新版本</string>
    <string name="share_title">分享到&#8230;</string>
    <string name="share_platform_wechat">微信</string>
    <string name="share_platform_moment">朋友圈</string>
    <string name="share_platform_qq">QQ</string>
    <string name="share_platform_qzone">QQ空间</string>
    <string name="share_platform_link">复制链接</string>
    <string name="share_platform_copy_hint">已复制到剪贴板</string>
    <string name="pay_title">请输入支付密码</string>
    <string name="select_min_hint">至少要选择 %d 项</string>
    <string name="select_max_hint">最多只能选择 %d 项</string>
    <string name="safe_title">身份校验</string>
    <string name="home_exit_hint">再按一次退出</string>
    <string name="home_nav_index">首页</string>
    <string name="home_nav_found">发现</string>
    <string name="home_nav_message">消息</string>
    <string name="home_nav_me">我的</string>
    <string name="login_register">注册</string>
    <string name="login_forget">忘记密码？</string>
    <string name="login_text">登录</string>
    <string name="wx_binding">绑定</string>
    <string name="login_other">其他登录方式</string>
    <string name="login_or">OR</string>
    <string name="retu_login">返回登录</string>
    <string name="register_title">注册</string>
    <string name="register_hint">手机号仅用于登录和保护账号安全</string>
    <string name="register_password_hint1">设置6&#8211;18位登录密码</string>
    <string name="register_password_hint2">请再次输入一次密码</string>
    <string name="register_succeed">注册成功</string>
    <string name="setting_title">设置</string>
    <string name="setting_language">语言切换</string>
    <string name="setting_language_simple">简体中文</string>
    <string name="setting_language_complex">繁体中文</string>
    <string name="setting_update">检查更新</string>
    <string name="setting_password">修改密码</string>
    <string name="setting_phone">修改手机</string>
    <string name="setting_auto">自动登录</string>
    <string name="setting_cache">清除缓存</string>
    <string name="setting_agreement">隐私协议</string>
    <string name="setting_about">关于我们</string>
    <string name="setting_exit">退出登录</string>
    <string name="about_title">关于我们</string>
    <string name="about_author"><font color="#85b84f">Android</font> 轮子哥</string>
    <string name="about_copyright">Copyright © 2018 &#8211; 2020</string>
    <string name="password_forget_title">忘记密码</string>
    <string name="password_reset_title">设置登录密码</string>
    <string name="password_reset_phone_hint1">设置6&#8211;18位登录密码</string>
    <string name="password_reset_phone_hint2">重新输入一次密码</string>
    <string name="password_reset_input_error">两次密码输入不一致，请重新输入</string>
    <string name="password_reset_success">密码重置成功</string>
    <string name="phone_reset_title">设置手机号</string>
    <string name="phone_reset_change_hint">下次登录请使用更换后的新手机号登录</string>
    <string name="phone_reset_commit">立即绑定</string>
    <string name="phone_reset_commit_succeed">绑定成功，下次登录请使用新手机号登录</string>
    <string name="personal_data_title">个人资料</string>
    <string name="personal_data_head">头像</string>
    <string name="personal_data_id">用户ID</string>
    <string name="personal_data_name">昵称</string>
    <string name="personal_data_name_hint">设置昵称</string>
    <string name="personal_data_address">地区</string>
    <string name="personal_data_address_hint">请选择</string>
    <string name="personal_data_phone">手机号码</string>
    <string name="personal_data_phone_hint">立即绑定</string>
    <string name="web_title">网页加载中&#8230;</string>
    <string name="image_select_title">图片选择</string>
    <string name="image_select_all">所有图片</string>
    <string name="image_select_total">共 %d 张</string>
    <string name="image_select_max_hint">本次最多只能选择 %d 张图片</string>
    <string name="video_select_title">视频选择</string>
    <string name="video_select_all">所有视频</string>
    <string name="video_select_total">共 %d 个</string>
    <string name="video_select_max_hint">本次最多只能选择 %d 个视频</string>
    <string name="camera_launch_fail">无法启动相机</string>
    <string name="camera_image_error">目标地址错误</string>
    <string name="tj">推荐</string>
    <string name="sq">社区</string>
    <string name="jj">竞技</string>
    <string name="sc">赛程</string>
    <string name="video">视频</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hot_live">热门直播</string>
    <string name="activity_topic">活动专题</string>
    <string name="my_gd">我的椰糖:</string>
    <string name="recharge">充值</string>
    <string name="exchage">兑换</string>
    <string name="xlczd">喜乐超值兑</string>
    <string name="my_service">我的服务</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="background_play">后台播放</string>
    <string name="hover_play">悬浮播放</string>
    <string name="user_info">个人资料</string>
    <string name="avatar">头像</string>
    <string name="nick_name">昵称</string>
    <string name="phone">手机号</string>
    <string name="sex">性别</string>
    <string name="msg_center">消息中心</string>
    <string name="is_read">标为已读</string>
    <string name="all">全部</string>
    <string name="notice">公告</string>
    <string name="order">订单</string>
    <string name="gd_recharge">椰糖充值</string>
    <string name="recharge_type">充值方式</string>
    <string name="confirm_recharge">确认充值</string>
    <string name="exchange_xlf">兑换喜乐分</string>
    <string name="can_exchange_gd">可兑换椰糖</string>
    <string name="xlf">喜乐分</string>
    <string name="input_exchange_num">请输入兑换数量</string>
    <string name="exchange_hint">兑换说明</string>
    <string name="xlsc">喜乐商城</string>
    <string name="wdjc">我的竞猜</string>
    <string name="wdmx">我的明细</string>
    <string name="wdfa">我的方案</string>
    <string name="vip">会员权限</string>
    <string name="bzykf">帮助与客服</string>
    <string name="gywm">关于我们</string>
    <string name="wdtg">推荐好友</string>
    <string name="zhyaq">账号与安全</string>
    <string name="setting">设置</string>
    <string name="filter">筛选</string>
    <string name="ytd">已退单</string>
    <string name="qcz">未猜中</string>
    <string name="cz">猜中</string>
    <string name="dgb">待公布</string>
    <string name="icon_logo">暂无内容，去其他地方转转~</string>
    <string name="svip">SVIP申请</string>
    <string name="bronze">青铜</string>
    <string name="bronze1"><![CDATA[0<成长值<9999]]></string>
    <string name="bronze_hint">1.查看方案需要购买</string>
    <string name="diamond">钻石</string>
    <string name="diamond1"><![CDATA[成长值>150000]]></string>
    <string name="diamond_hint">1.免费查看108椰糖一下赛事分析方案</string>
    <string name="gold">黄金</string>
    <string name="gold1"><![CDATA[3000<成长值<79999]]></string>
    <string name="gold_hint">1.免费查看58椰糖以下赛事分析方案</string>
    <string name="platinum">铂金</string>
    <string name="platinum1"><![CDATA[80000<成长值<149999]]></string>
    <string name="platinum_hint">1.免费查看88椰糖以下赛事分析方案</string>
    <string name="silver">白银</string>
    <string name="silver1"><![CDATA[10000<成长值<29999]]></string>
    <string name="login_password">登录密码</string>
    <string name="up_login_password">修改登录密码</string>
    <string name="update">修改</string>
    <string name="certified">认证通过</string>
    <string name="verified">实名认证</string>
    <string name="alive">人脸核身</string>
    <string name="input_phone_num_hint">请输入手机号码</string>
    <string name="captcha">图形验证码</string>
    <string name="input_captcha_hint">请输入图形验证码</string>
    <string name="verification_code">验证码</string>
    <string name="get_code">发送验证码</string>
    <string name="input_code_hint">请输入验证码</string>
    <string name="new_password">新密码</string>
    <string name="input_new_password_hint">请输入新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="input_new_password_hint2">请再次输入新密码</string>
    <string name="version_hint">版本说明</string>
    <string name="yhxy">用户协议</string>
    <string name="yszc">隐私政策</string>
    <string name="lxwm">联系我们</string>
    <string name="yjfk">意见反馈</string>
    <string name="swhz">在线客服</string>
    <string name="kfrx">客服热线</string>
    <string name="cjwt">常见问题</string>
    <string name="wt_yjms">问题/意见描述</string>
    <string name="input_feedback_hint">请在此描述您的问题或建议</string>
    <string name="input_feedback_bio">请在此书写您的个性签名</string>
    <string name="dj">电竞</string>
    <string name="zq">足球</string>
    <string name="lq">篮球</string>
    <string name="ty">体育</string>
    <string name="yx">游戏</string>
    <string name="zb">直播</string>
    <string name="no_login">未登录</string>
    <string name="login_hint">登陆可享更多服务</string>
    <string name="yjdl">一键登录</string>
    <string name="msg_code_login">短信验证码登录</string>
    <string name="account_password_login">账号密码登录</string>
    <string name="yu_yue">预约</string>
    <string name="my_reservation">我的预约</string>
</resources>