<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sameal.dd.ui.ddActivity.ExchangeActivity">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:lineVisible="true"
        app:title="@string/exchange_xlf" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingVertical="20dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/icon_jelly" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="4dp"
                android:text="@string/can_exchange_gd"
                android:textColor="@color/gray"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="30dp"
                android:text="0.00"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </RelativeLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/icon_exchange" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="15dp"
            android:paddingEnd="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/xlf"
                android:textColor="@color/gray"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/et_exchange_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@null"
                android:hint="@string/input_exchange_num"
                android:inputType="number"
                android:textSize="15sp" />

        </RelativeLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_exchage"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_selector2"
        android:text="@string/exchage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="15dp"
        android:text="@string/exchange_hint" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="1.喜乐分是指用户通过“兑换椰糖“转换所得，兑换成功后，可以在喜乐商城兑换商品;
        \n\n⒉兑换比例:1兑换椰糖=1喜乐分;
        \n\n3.兑换喜乐分属于特殊业务，成功兑换后不支持回退;
        \n\n4.若发生因网络延迟时等造成兑换不成功的情况，请您耐心等待，不要多次提交请求，以免重复兑换;
        \n\n5.兑换时需保证您的号码处于正常状态。停机、欠费、非实名制等状态，可能会导致兑换不成功。"
        android:textColor="@color/gray"
        android:textSize="13sp" />

</LinearLayout>