<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:lineColor="@color/colorLine"
        app:lineSize="1dp"
        app:lineVisible="true"
        app:title="@string/setting_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_cache" />

        <TextView
            android:id="@+id/tv_cache_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:textColor="@color/gray" />

        <ImageView
            android:layout_width="12dp"
            android:layout_height="16dp"
            android:src="@mipmap/icon_next" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="播放设置"
        android:textColor="@color/gray"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:visibility="invisible">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/background_play" />

        <com.hjq.widget.view.SwitchButton
            android:id="@+id/sb_background_play"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="end|center_vertical"
            android:checked="true" />

    </LinearLayout>

    <View
        style="@style/HorizontalLineStyle"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:visibility="invisible">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hover_play" />

        <com.hjq.widget.view.SwitchButton
            android:id="@+id/sb_hover_play"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="end|center_vertical"
            android:checked="true" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login_exit"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_selector2"
        android:text="@string/setting_exit" />

</LinearLayout>